--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
     }
   ],
   "start_url": ".",
-  "theme_color": "#4EA528",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone"
 }
