--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "sharinggoodapp",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "cp environments/.env.dev .env && npm start",
+    "prod": "cp environments/.env.prod .env && npm start",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@formspree/react": "^2.2.4",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -25,12 +33,6 @@
     "sass": "^1.50.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
